# ccomp

./: .gitignore  CMakeLists.txt  README.md
ast_view/: .gitignore  ast_tree_ctrl.c  ast_tree_ctrl.cpp  ast_view.aps  ast_view.c  ast_view.cpp  ast_view.h  ast_view.rc  ast_view.vcxproj  ast_view.vcxproj.filters  framework.h  main_wnd.c  main_wnd.h  pch.h  resource.h  source_file.c  source_text_ctrl.c  source_text_ctrl.cpp
compiler/: CMakeLists.txt  compiler.c
jcc_build/: comp.cfg  compile.sh  rebuild.sh  win_comp.cfg
libcomp/: CMakeLists.txt
libcomp/include/: abi.h  ast.h  ast_internal.h  ast_op_kinds.h  code_gen.h  comp_opt.h  decl_map.h  diag.h  id_map.h  int_val.h  lexer.h  nps.h  parse.h  parse_internal.h  pp.h  pp_internal.h  sema.h  sema_internal.h  sema_types.h  source.h  source_range.h  std_types.h  tok_kind.h  token.h  validate.h  var_set.h  x86_asm.h
libcomp/src/: abi.c  ast.c  ast_print.c  code_gen.c  code_gen2.c  code_gen_expr.c  comp_opt.c  decl_map.c  (+24 more)
libj/: CMakeLists.txt
test/: CMakeLists.txt  hash_table_test.cpp  lex_line_cont_test.cpp  lex_pre_proc_test.cpp  lex_test.cpp  pp_cond_test.cpp  pp_define_test.cpp  pp_expr_test.cpp  pp_include_test.cpp  test.cpp  validate_bin_ops.cpp  validate_decl_spec.cpp  validate_enum.cpp  validate_for_smnt.c  validate_func_call.cpp  validate_global_fns.cpp  validate_global_vars.cpp  validate_goto.cpp  validate_local_vars.cpp  validate_ptr.cpp  validate_return_smnt.cpp  validate_str_literal.cpp  validate_struct.cpp  validation_fixture.h  validation_tests.cpp
test/jcc_test/: CMakeLists.txt  cmd_line_parser.cpp  const_expr_eval_test.cpp  lex_line_cont_test.cpp  lex_test.cpp  parse_decl_test.cpp  parse_types_test.cpp  pp_cond_test.cpp  pp_define_builtin_test.cpp  pp_define_test.cpp  pp_expr_test.cpp  pp_include_test.cpp  pp_test.cpp  struct_layout_tests.cpp  validate_array.cpp  validate_bin_ops.cpp  validate_cast_expr.cpp  validate_decl_spec.cpp  validate_enum.cpp  validate_expr.cpp  validate_fn_ptr.cpp  validate_for_smnt.c  validate_for_smnt.cpp  validate_func_call.cpp  validate_global_fns.cpp  validate_global_vars.cpp  validate_goto.cpp  validate_local_vars.cpp  validate_ptr.cpp  validate_return_smnt.cpp  validate_str_literal.cpp  validate_struct.cpp  validate_struct_member_access.cpp  validate_switch_smnt.cpp  validation_fixture.h  validation_tests.cpp
test_app/: build.sh  jcc.sh  main.c  test.c  test.h
test_code/: .gdbinit  comp.cfg  jcc.sh  rebuild.sh  run_test.py  temp.s  wincomp.cfg
(+213 files in other folders)
